--- a/base/_lists.scss
+++ b/base/_lists.scss
@@ -10,12 +10,6 @@ LISTS
 	.list {
 		padding: 0;
 		margin: 0;
-		& > li{
-			margin-left: 0.3em;
-		}
-		& > li:first-child{
-			margin-left: 0;
-		}
 	}
 
 	%list--unstyled,
@@ -29,7 +23,11 @@ LISTS
 		padding: 0;
 		margin: 0;
 		& > li{
-		  display: inline-block;
+			display: inline-block;
+			margin-left: 0.3em;
+			&:first-child {
+				margin-left: 0;
+			}
 		}
 	}
 	
